# hami-analysis

./: .gitignore
.github/workflows/: main.yml
.githuub/workflows/: repostats-hami.yml
Project-HAMi/HAMi/: README.md
Project-HAMi/HAMi-core/: README.md
Project-HAMi/HAMi-core/ghrs-data/: forks.csv  stargazer-snapshots.csv  stargazers.csv  views_clones_aggregate.csv
Project-HAMi/HAMi-core/ghrs-data/snapshots/: 2025-09-29_062019_views_clones_series_fragment.csv  2025-09-29_232329_views_clones_series_fragment.csv  (+691 more)
Project-HAMi/HAMi-core/latest-report/: report.html  report.md  report_for_pdf.html
Project-HAMi/HAMi/ghrs-data/: forks.csv  stargazer-snapshots.csv  stargazers.csv  views_clones_aggregate.csv
Project-HAMi/HAMi/latest-report/: report.html  report.md  report_for_pdf.html
project-hami-weekly-report/: README.md  config.example.yaml  pyproject.toml
project-hami-weekly-report/skills/weekly-hami-org-highlights/: SKILL.md
project-hami-weekly-report/skills/weekly-hami-org-highlights/agents/: openai.yaml
project-hami-weekly-report/skills/weekly-hami-org-highlights/scripts/: evidence_reader.py  validate_report.py
project-hami-weekly-report/src/hami_github_activity/: __init__.py  __main__.py  cli.py  collector.py  config.py  date_range.py  github_client.py  markdown_renderer.py  models.py
project-hami-weekly-report/tests/: test_cli.py  test_collector.py  test_config.py  test_date_range.py  test_github_client.py  test_markdown_renderer.py  test_models.py  test_skill_evidence_reader.py  test_skill_report_validator.py
(+694 files in other folders)
